--- a/src/app/components/registration/registration.component.scss
+++ b/src/app/components/registration/registration.component.scss
@@ -1,19 +1,26 @@
-.p1 {
+#p1{
+    //background: #cc1a88;
+    background-image: linear-gradient(to top right, blue, green);
+}
+.p1{
     display: flex;
     justify-content: center;
-    border: 2px solid black;
+    text-align: center;
     width: 500px;
     margin: auto;
-    background: aquamarine;
-    border-radius: 5px;
+    background: white;
+    border-radius: 10px;
+    border: 2px solid black;
 }
 h1 {
+    text-align: center;
     font-size: 40px;
-    color:orchid;
+    font-weight: bold;
 }
 button{
-    background: steelblue;
+    width:30%;
     font-size: 20px;
+    float:right;
 }
 
 .error {
@@ -24,9 +31,15 @@ button{
     position: relative;
     span{
         position:absolute;
-        top: 45px;
+        top: 48px;
         left: 310px;
     }
+}
+#v1{
+     float: left;
+    color:black;
+    font-size: 15px;
+    font-weight: bold;
 }
 .s2{
     width:600px;
