--- a/src/app/invoices/invoices.component.html
+++ b/src/app/invoices/invoices.component.html
@@ -46,7 +46,7 @@
         <button mat-icon-button color="primary" aria-label="Example icon button with a menu icon">
           <mat-icon style="color:rgb(77, 137, 220)">menu</mat-icon>
         </button>
-        <button mat-icon-button color="primary" aria-label="Example icon button with a menu icon">
+        <button mat-icon-button color="primary" aria-label="Example icon button with a menu icon" (click)="editInvoice(element)">
           <mat-icon>edit</mat-icon>
         </button>
         <button mat-icon-button color="warn" aria-label="Example icon button with a menu icon"
@@ -92,32 +92,39 @@
 <mat-paginator [length]="100" class="mat-paginator-outer-container mat-form-field-flex ng-tns-c76-5 bg-secondary text-white mt-3"
   [pageSize]="10"
   [pageSizeOptions]="[5, 10, 25, 100]"
-  aria-label="Select page">
+  aria-label="Select page"
+  showFirstLastButtons>
 </mat-paginator>
 <!-- spinner -->
 <mat-spinner strokeWidth="8" color="warn" diameter="100" *ngIf="spinner"></mat-spinner>
 <!-- add new invoice -->
 <div *ngIf="showForm" class="showForm">
   <div class="subForm">
+    <div style="text-align: center;">
+      <h3>{{title}}</h3>
+    </div>
     <div>
       <label for="">Id :</label>
-      <input type="text" [(ngModel)]="newInvoice.id">
+      <input type="text" class="form-control"[(ngModel)]="newInvoice.id" style="margin-left: 35px;">
     </div>
     <div>
       <label for="">Name :</label>
-      <input type="text" [(ngModel)]="newInvoice.name">
+      <input type="text" class="form-control" [(ngModel)]="newInvoice.name">
     </div>
     <div>
       <label for="">Email :</label>
-      <input type="text" [(ngModel)]="newInvoice.email">
+      <input type="email" class="form-control" [(ngModel)]="newInvoice.email">
     </div>
     <div>
       <label for="">Phno :</label>
-      <input type="text" [(ngModel)]="newInvoice.phone">
+      <input type="number" class="form-control" [(ngModel)]="newInvoice.phone">
     </div>
     <div class="btns">
-      <button class="btn btn-primary" (click)="addChanges($event)">Save changes</button>
+      <button class="btn btn-primary" (click)="addChanges()">{{btnText}}</button>
       <button class="btn btn-danger" (click)="cancel()">Cancel</button>
     </div>
   </div>
 </div>
+
+        <!-- delete model -->
+        
