--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -32,11 +32,11 @@
         }
         .login-container {
             position: absolute;
-            z-index:2;
             width:450px;
+            height:500px;
             background-color:rgb(255, 255, 255);
             top:70px;
-            left:20px;
+            left:40px;
             border-radius:35px;
             box-shadow: 0 16px 32px 0 rgba(145, 82, 82, 0.08);
             .userName{
@@ -90,3 +90,9 @@
         }
    } 
 }
+// .ng-valid{
+//      outline: solid 1px red;
+//     // box-shadow: 0px 0px 8px red;
+//     box-shadow: 0 0 0 0.25rem rgba(255, 0, 0, 0.2);
+
+// }
