--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -3,4 +3,8 @@
     <h1 class="demo" class="border border-primary position-static  p-3 " class="text-danger p-2"
         style="--bs-bg-opacity: .5;">
         VSS Project-1</h1>
+        VSS PROJECT2
+    </h1>
+    <mat-icon id="icon">account_circle</mat-icon>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </div>
