--- a/src/app/core/footeer/footeer.component.html
+++ b/src/app/core/footeer/footeer.component.html
@@ -3,6 +3,37 @@
         style="--bs-bg-opacity: .5;">
         THIS IS FOOTER</h1>
 </div>
+    <h1><i style="opacity: 0.5;">OUR AMAZON WORLD </i></h1>
+    <i class="fab fa-facebook-f"></i>
+
+<div class="social">
+    <mat-icon> email</mat-icon>
+     <mat-icon>facebook</mat-icon>
+     <mat-icon> chat</mat-icon>
+</div>
+    
+    <div class="justy">    
+    <div>
+        <h3><mat-icon>account_circle</mat-icon>CONTACT</h3>
+        <div><span>&copy;</span>Twitter</div>
+        <div><span>&copy;</span>Facebook</div>
+        <div><span>&copy;</span>Instagram</div>
+        
+    </div>
+    <div>
+        <h3>MAKE MONEY WITH US</h3>
+        <div><span>&copy;</span>selling</div>
+        <div><span>&copy;</span>buying</div>
+        <div><span>&copy;</span>subscrition</div>
+    </div>
+    <div>
+        <h3>AVALIBLE SERVICES</h3>
+        <div><span>&copy;</span>online payment</div>
+        <div><span>&copy;</span>prime vedios</div>
+        <div><span>&copy;</span>booking tickets</div>
+    </div>
+</div>
+  </div>
 
 
  
