--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -3,9 +3,34 @@
     justify-content: flex-start;
     background-color: rgb(190, 201, 201);
     padding: 20px 0px;
-    margin: 0px;
+    margin-bottom: 2px;
     padding: 0px;
-    background-color: aqua;
+    background-color: rgb(114, 101, 189);
+    border-radius: 0px 25px 0px 25px;
+    position: relative;
+    mat-icon{
+        position:absolute;
+        right: 50px;
+        top:50px;
+        transform:scale(3);
+        &:hover{
+         &.logout{
+                
+                background: white;
+                right: 15px;
+                width: 200px;
+                height: 200px;
+                border-radius: 10px;
+                
+        
+        }
+    }
+    
+         
+        &div{
+            margin-bottom: 10px;
+        }
+    }
     
 
     div {
@@ -24,6 +49,9 @@
         font-style: unset;
     }
 }
+
+    
+
 
 // .demo{
 
