--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -2,7 +2,7 @@
     <div><img src="../../../assets/apple.jpg"/></div>
     <h1 class="demo" class="border border-primary position-static  p-3 " class="text-danger p-2"
         style="--bs-bg-opacity: .5;">
-        VSS Project-1</h1>
+        VSS Project-1
         VSS PROJECT2
     </h1>
     <mat-icon id="icon">account_circle</mat-icon>
