--- a/src/app/core/footeer/footeer.component.html
+++ b/src/app/core/footeer/footeer.component.html
@@ -1,8 +1,9 @@
 <div class="main-container">
     <h1 class="demo" class="border border-primary position-static  p-3 " class="text-block p-2"
         style="--bs-bg-opacity: .5;">
-        THIS IS FOOTER</h1>
-</div>
+        THIS IS FOOTER
+    </h1>
+
     <h1><i style="opacity: 0.5;">OUR AMAZON WORLD </i></h1>
     <i class="fab fa-facebook-f"></i>
 
@@ -32,6 +33,7 @@
         <div><span>&copy;</span>prime vedios</div>
         <div><span>&copy;</span>booking tickets</div>
     </div>
+</div>
 </div>
  
 
