--- a/src/app/components/registration/registration.component.scss
+++ b/src/app/components/registration/registration.component.scss
@@ -1,77 +1,153 @@
-#p1{
-    //background: #cc1a88;
-    background-image: linear-gradient(to top right, blue, green);
+// #p1{
+//     //background: #cc1a88;
+//     background-image: linear-gradient(to top right, blue, green);
+// }
+// .p1{
+//     display: flex;
+//     justify-content: center;
+//     text-align: center;
+//     width: 500px;
+//     margin: auto;
+//     background: white;
+//     border-radius: 10px;
+//     border: 2px solid black;
+// .form-group {
+//     position: relative;
+//      #v1{
+//         font-size: 15px;
+//         font-weight: bold;
+//      }
+    
+//     span {
+//         position: absolute;
+//         top: 45px;
+//         right: 10px;
+
+//     }
+//   }
+// }
+// .error {
+//     color: red;
+// }
+// .s1 {
+//     width: 600px;
+//     background: #fff;
+//     border-radius: 10px;
+//     position: absolute;
+//     top: 50%;
+//     left: 50%;
+//     transform: translate(-50%, -50%);
+//     text-align: center;
+//     margin: auto;
+//     color: #333;
+//     padding: 30px;
+//     border: 1px solid black;
+
+//     img {
+//         width: 100px;
+//         border-radius: 50%;
+//         margin-top: -80px;
+//         box-shadow: 0px 2px 2px #fff;
+//     }
+
+//     .s2 {
+//         width: 100%;
+//         padding: 10px;
+//         color: #fff;
+//         background: #6fd649;
+//         border: 0;
+//         font-size: 25px;
+//         border-radius: 5px;
+//         cursor: pointer;
+//         box-shadow: 0px 2px 2px #fff;
+//     }
+
+// }
+.ddd{
+  background-image: linear-gradient(to top right, blue, green);
+  height:110vh;
+  margin: 0px;
+  padding:250px;
 }
-.p1{
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    width: 500px;
-    margin: auto;
-    background: white;
-    border-radius: 10px;
+.main-container {
     border: 2px solid black;
-}
-h1 {
-    text-align: center;
-    font-size: 40px;
-    font-weight: bold;
-}
-button{
-    width:30%;
+    border-radius: 10px;
+    background: #fff;
+    form{
+        padding: 60px;
+    }
+      h1 {
+        text-align: center;
+        font-size: 40px;
+        font-weight: bold;
+        margin-bottom: 40px;
+    }
+   .row {
+        min-height: 410px;
+        margin-bottom: 20px;
+        .col-6 {
+            .form-group {
+                position: relative;
+                 #v1{
+                    font-size: 15px;
+                    font-weight: bold;
+                 }
+                
+                span {
+                    position: absolute;
+                    top: 45px;
+                    right: 10px;
+
+                }
+            }
+        }
+     }
+  }
+
+  button {
+    float: right;
     font-size: 20px;
-    float:right;
-}
+   // margin-top: -45px;
+}  
+
 
 .error {
     color: red;
 }
 
-.form-group{
-    position: relative;
-    span{
-        position:absolute;
-        top: 48px;
-        left: 310px;
-    }
-}
-#v1{
-     float: left;
-    color:black;
-    font-size: 15px;
-    font-weight: bold;
-}
-.s2{
-    width:600px;
-    background:#fff;
+.s1 {
+    width: 600px;
+    background: #fff;
     border-radius: 10px;
-    position:absolute;
-    top:50%;
-    left:50%;
-    transform:translate(-50%,-50%);
-    text-align:center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
     margin: auto;
-    color:#333;
-    padding:30px;
+    color: #333;
+    padding: 30px;
     border: 1px solid black;
-}
-.s2 img{
-    width:100px;
-    border-radius: 50%;
-    margin-top: -80px;
-    box-shadow: 0px 2px 2px #fff;
-}
-.s2 button{
-    width:100%;
-    padding:10px;
-    color: #fff;
-    background: #6fd649;
-    border: 0;
-    font-size: 25px;
-    border-radius: 5px;
-    cursor: pointer;
-    box-shadow: 0px 2px 2px #fff;
-}
 
+    img {
+        width: 100px;
+        border-radius: 50%;
+        margin-top: -80px;
+        box-shadow: 0px 2px 2px #fff;
+    }
 
+    .s2 {
+        width: 100%;
+        padding: 10px;
+        color: #fff;
+        background: #6fd649;
+        border: 0;
+        font-size: 25px;
+        border-radius: 5px;
+        cursor: pointer;
+        box-shadow: 0px 2px 2px #fff;
+        margin-top: 50px;
+    }
+
+}
 
