--- a/src/app/invoices/invoices.component.html
+++ b/src/app/invoices/invoices.component.html
@@ -43,36 +43,18 @@
     <ng-container matColumnDef="actions">
       <th class="actions" mat-header-cell *matHeaderCellDef style="color:white">Actions </th>
       <td mat-cell *matCellDef="let element">
-        <button mat-icon-button color="primary" aria-label="Example icon button with a menu icon">
+        <!-- <button mat-icon-button color="primary" aria-label="Example icon button with a menu icon">
           <mat-icon style="color:rgb(77, 137, 220)">menu</mat-icon>
-        </button>
-        <button mat-icon-button color="primary" aria-label="Example icon button with a menu icon" (click)="editInvoice(element)">
+        </button> -->
+        <button mat-icon-button color="primary" aria-label="Example icon button with a edit icon" (click)="editInvoice(element)">
           <mat-icon>edit</mat-icon>
         </button>
-        <button mat-icon-button color="warn" aria-label="Example icon button with a menu icon"
+        <button mat-icon-button color="warn" aria-label="Example icon button with a delete icon"
           (click)="deleteInv(element.id)">
           <mat-icon>delete</mat-icon>
         </button>
       </td>
     </ng-container>
-
-    <!-- <ng-container matColumnDef="update">
-        <th mat-header-cell *matHeaderCellDef style="color:white">Update </th>
-        <td mat-cell *matCellDef="let element">
-          <button mat-icon-button color="primary" aria-label="Example icon button with a menu icon">
-            <mat-icon>edit</mat-icon>
-          </button>
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="delete">
-        <th mat-header-cell *matHeaderCellDef style="color:white">Delete </th>
-        <td mat-cell *matCellDef="let element">
-          <button mat-icon-button color="warn" aria-label="Example icon button with a menu icon">
-            <mat-icon>delete</mat-icon>
-          </button>
-        </td>
-      </ng-container> -->
 
     <tr class="head" mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns:displayedColumns"></tr>
@@ -83,11 +65,6 @@
   </table>
   <!-- <mat-paginator color="warn" [pageSizeOptions]="[8, 16, 24]" showFirstLastButtons>
   </mat-paginator> -->
-
-  <!--<mat-paginator [length]="100" class="mat-paginator-outer-container mat-form-field-flex ng-tns-c76-5" [pageSize]="10"
-    [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page">
-  </mat-paginator>-->
-  
 </div>
 <mat-paginator [length]="100" class="mat-paginator-outer-container mat-form-field-flex ng-tns-c76-5 bg-secondary text-white mt-3"
   [pageSize]="10"
@@ -95,6 +72,7 @@
   aria-label="Select page"
   showFirstLastButtons>
 </mat-paginator>
+
 <!-- spinner -->
 <mat-spinner strokeWidth="8" color="warn" diameter="100" *ngIf="spinner"></mat-spinner>
 <!-- add new invoice -->
@@ -127,4 +105,16 @@
 </div>
 
         <!-- delete model -->
-        
+        <div class="dialogue" *ngIf="showDeleteform">
+            <div class="subDialogue">
+               <div>
+                   <h6>Are you sure to remove this item? </h6>
+                   <p>It will delete item permanently.</p>
+               </div>
+               <div class=" btns mt-5  ">
+                   <button class="btn btn-primary" (click)="conifirmDelete()">YES DELETE</button>
+                   <button class="btn btn-danger" (click)="cancelDelete()">CANCEL</button>
+               </div>
+            </div>
+        </div>
+ 
