--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,9 +1,9 @@
-<h1 class="text-info">this is  dashBoard</h1>
-<div class="container-fluid">
+<!-- <h1 class="text-info">this is  dashBoard</h1> -->
+<div class="container-fluid mt-3">
     <ngb-carousel >
       <ng-template ngbSlide>
         <div class="wrapper">
-          <img src="./../../../assets/image1.png" alt="Random first slide">
+          <img src="./../../../assets/image3.jpg" alt="Random first slide">
         </div>
         <div class="carousel-caption">
           <h3>First Slide</h3>
@@ -19,7 +19,7 @@
       </ng-template>
       <ng-template ngbSlide>
         <div class="wrapper">
-          <img src="./../../../assets/image3.jpg"  alt="Random third slide">
+          <img src="./../../../assets/image1.png"  alt="Random third slide">
         </div>
         <div class="carousel-caption">
           <h3>Third Slide</h3>
@@ -34,4 +34,4 @@
         </div>
       </ng-template>
     </ngb-carousel>
-    </div>
+</div>
