--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -192,13 +192,13 @@
                     </div>
                     <div class="form-group">
                         <label for="phno" id="v1" class="col-sm-2 col-form-label">Ph.no*:</label>
-                        <input type="number" formControlName="phno" minlength="10" class="form-control" id="phno"
+                        <input type="number" formControlName="phno" maxlength="10" class="form-control" id="phno"
                             placeholder="Enter Ph.no">
                         <ng-container
                             *ngIf="(getRegFormControl('phno').touched || getRegFormControl('phno').dirty) && getRegFormControl('phno').invalid">
                             <div class="error" *ngIf="getRegFormControl('phno')?.errors['required']">Ph.no is required
                             </div>
-                            <div class="error" *ngIf="getRegFormControl('phno')?.errors['maxlength']">max.10 letters has
+                            <div class="error" *ngIf="getRegFormControl('phno')?.errors['minlength']">min.10 letters has
                                 required
                             </div>
                         </ng-container>
@@ -208,46 +208,26 @@
                         <span style="color: rgb(9, 245, 80);" *ngIf="getRegFormControl('phno').valid"><i
                                 class="bi bi-check-circle-fill"></i></span>
                     </div>
-                </div>
-                <div class="col-6">
-                    <div class="form-group ">
-                        <label for="address" id="v1" class="col-sm-2 col-form-label">Address*:</label>
-                        <input type="text" formControlName="address" maxlength="50" class="form-control" id="address"
-                            placeholder="Enter Address">
+                    <!-- <div class="form-group">
+                        <label for="pincode" id="v1" class="col-sm-2 col-form-label">Pincode*:</label>
+                        <input type="number" formControlName="pincode" maxlength="6" class="form-control" id="pincode"
+                            placeholder="Enter Pincode">
                         <ng-container
-                            *ngIf="(getRegFormControl('address').touched || getRegFormControl('address').dirty) && getRegFormControl('address').invalid">
-                            <div class="error" *ngIf="getRegFormControl('address')?.errors['required']">Address is
-                                required</div>
-                            <div class="error" *ngIf="getRegFormControl('address')?.errors['minlength']">min.20 letters
-                                has required
+                            *ngIf="(getRegFormControl('pincode').touched || getRegFormControl('pincode').dirty) && getRegFormControl('pincode').invalid">
+                            <div class="error" *ngIf="getRegFormControl('pincode')?.errors['required']">Pincode is required
+                            </div>
+                            <div class="error" *ngIf="getRegFormControl('pincode')?.errors['minlength']">min.6 letters has
+                                required
                             </div>
                         </ng-container>
                         <span style="color:red"
-                            *ngIf="(getRegFormControl('address').touched || getRegFormControl('address').dirty) && getRegFormControl('address').invalid">
-                            <i class="bi bi-x-circle-fill"></i>
-                        </span>
-                        <span style="color: rgb(9, 245, 80);" *ngIf="getRegFormControl('address').valid">
-                            <i class="bi bi-check-circle-fill"></i>
-                        </span>
-                    </div>
-                    <div class="form-group">
-                        <label for="national" id="v1" class="col-sm-2 col-form-label">Nationality*:</label>
-                        <input type="text" formControlName="nationality" maxlength="10" class="form-control"
-                            id="national" placeholder="Enter Nationality">
-                        <ng-container
-                            *ngIf="(getRegFormControl('nationality').touched || getRegFormControl('nationality').dirty) && getRegFormControl('nationality').invalid">
-                            <div class="error" *ngIf="getRegFormControl('nationality')?.errors['required']">Nationality
-                                is
-                                required</div>
-                        </ng-container>
-                        <span style="color:red"
-                            *ngIf="(getRegFormControl('nationality').touched || getRegFormControl('nationality').dirty) && getRegFormControl('nationality').invalid">
-                            <i class="bi bi-x-circle-fill"></i>
-                        </span>
-                        <span style="color: rgb(9, 245, 80);" *ngIf="getRegFormControl('nationality').valid">
-                            <i class="bi bi-check-circle-fill"></i>
-                        </span>
-                    </div>
+                            *ngIf="(getRegFormControl('pincode').touched || getRegFormControl('pincode').dirty) && getRegFormControl('pincode').invalid"><i
+                                class="bi bi-x-circle-fill"></i></span>
+                        <span style="color: rgb(9, 245, 80);" *ngIf="getRegFormControl('pincode').valid"><i
+                                class="bi bi-check-circle-fill"></i></span>
+                    </div> -->
+                </div>
+                <div class="col-6">
                     <div class="form-group ">
                         <label for="uname" id="v1" class="col-sm-2 col-form-label">UserName*:</label>
                         <input type="text" formControlName="uname" maxlength="20" class="form-control" id="uname"
@@ -285,8 +265,35 @@
                             <i class="bi bi-check-circle-fill"></i>
                         </span>
                     </div>
-                </div>
-            </div>
+                    <div class="form-group ">
+                        <label for="userType" id="v1" class="col-sm-2 col-form-label">UserType*:</label><br>
+                            <select id="user">
+                              <option value="userType" selected disabled>Select User Type</option>
+                              <option value="{{user}}" *ngFor="let user of userType">{{user}}</option>
+                            </select>
+                     </div>
+                     <div class="form-group ">
+                        <label for="address" id="v1" class="col-sm-2 col-form-label">Address*:</label>
+                        <textarea type="text" formControlName="address" maxlength="50" class="form-control" id="address"
+                            placeholder="Enter Address"></textarea>
+                        <ng-container
+                            *ngIf="(getRegFormControl('address').touched || getRegFormControl('address').dirty) && getRegFormControl('address').invalid">
+                            <div class="error" *ngIf="getRegFormControl('address')?.errors['required']">Address is
+                                required</div>
+                            <div class="error" *ngIf="getRegFormControl('address')?.errors['minlength']">min.20 letters
+                                has required
+                            </div>
+                        </ng-container>
+                        <span style="color:red"
+                            *ngIf="(getRegFormControl('address').touched || getRegFormControl('address').dirty) && getRegFormControl('address').invalid">
+                            <i class="bi bi-x-circle-fill"></i>
+                        </span>
+                        <span style="color: rgb(9, 245, 80);" *ngIf="getRegFormControl('address').valid">
+                            <i class="bi bi-check-circle-fill"></i>
+                        </span>
+                    </div>
+                        </div>
+                    </div>
             <button type="submit" class="btn btn-success" [disabled]="RegForm.invalid">Save</button>
         </form>
     </div>
@@ -294,7 +301,7 @@
     <div class="s1" *ngIf="!disabled">
         <img src="../assets/download.png">
         <h2>Registaration is succesfully</h2>
-        <p>please go to login page</p><a [routerLink]="['/login']">login</a>
-        <button class="s2" type="button">ok</button>
+        <p>please go to login page</p>
+        <button class="s2" type="button"><a [routerLink]="['/login']">login</a></button>
     </div>
 </div>
