--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -229,39 +229,39 @@
                 </div>
                 <div class="col-6">
                     <div class="form-group ">
-                        <label for="uname" id="v1" class="col-sm-2 col-form-label">UserName*:</label>
-                        <input type="text" formControlName="uname" maxlength="20" class="form-control" id="uname"
+                        <label for="userName" id="v1" class="col-sm-2 col-form-label">UserName*:</label>
+                        <input type="text" formControlName="userName" maxlength="20" class="form-control" id="userName"
                             placeholder="Enter UserName">
                         <ng-container
-                            *ngIf="(getRegFormControl('uname').touched || getRegFormControl('uname').dirty) && getRegFormControl('uname').invalid">
-                            <div class="error" *ngIf="getRegFormControl('uname')?.errors['required']">UserName is
+                            *ngIf="(getRegFormControl('userName').touched || getRegFormControl('userName').dirty) && getRegFormControl('userName').invalid">
+                            <div class="error" *ngIf="getRegFormControl('userName')?.errors['required']">UserName is
                                 required</div>
                         </ng-container>
                         <span style="color:red"
-                            *ngIf="(getRegFormControl('uname').touched || getRegFormControl('uname').dirty) && getRegFormControl('uname').invalid">
+                            *ngIf="(getRegFormControl('userName').touched || getRegFormControl('userName').dirty) && getRegFormControl('userName').invalid">
                             <i class="bi bi-x-circle-fill"></i>
                         </span>
-                        <span style="color: rgb(9, 245, 80);" *ngIf="getRegFormControl('uname').valid">
+                        <span style="color: rgb(9, 245, 80);" *ngIf="getRegFormControl('userName').valid">
                             <i class="bi bi-check-circle-fill"></i>
                         </span>
                     </div>
                     <div class="form-group ">
                         <label for="password" id="v1" class="col-sm-2 col-form-label">Password*:</label>
-                        <input type="password" formControlName="pswd" maxlength="10" class="form-control" id="password"
+                        <input type="password" formControlName="password" maxlength="10" class="form-control" id="password"
                             placeholder="Enter Password">
                         <ng-container
-                            *ngIf="(getRegFormControl('pswd').touched || getRegFormControl('pswd').dirty) && getRegFormControl('pswd').invalid">
-                            <div class="error" *ngIf="getRegFormControl('pswd')?.errors['required']">Password is
+                            *ngIf="(getRegFormControl('password').touched || getRegFormControl('password').dirty) && getRegFormControl('password').invalid">
+                            <div class="error" *ngIf="getRegFormControl('password')?.errors['required']">Password is
                                 required</div>
-                            <div class="error" *ngIf="getRegFormControl('pswd')?.errors['minlength']">min.8 letters has
+                            <div class="error" *ngIf="getRegFormControl('password')?.errors['minlength']">min.8 letters has
                                 required
                             </div>
                         </ng-container>
                         <span style="color:red"
-                            *ngIf="(getRegFormControl('pswd').touched || getRegFormControl('pswd').dirty) && getRegFormControl('pswd').invalid">
+                            *ngIf="(getRegFormControl('password').touched || getRegFormControl('password').dirty) && getRegFormControl('password').invalid">
                             <i class="bi bi-x-circle-fill"></i>
                         </span>
-                        <span style="color: rgb(9, 245, 80);" *ngIf="getRegFormControl('pswd').valid">
+                        <span style="color: rgb(9, 245, 80);" *ngIf="getRegFormControl('password').valid">
                             <i class="bi bi-check-circle-fill"></i>
                         </span>
                     </div>
