--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -14,7 +14,7 @@
                 </div>
                 <div class="password mt-3">
                     <mat-icon class="accountIcon">lock</mat-icon>
-                    <input type="text" class="form-control"  formControlName="password" 
+                    <input type="password" class="form-control"  formControlName="password" 
                     placeholder="Password">
                 </div>
                 <div class="select mt-3">
