--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -267,7 +267,7 @@
                     </div>
                     <div class="form-group ">
                         <label for="userType" id="v1" class="col-sm-2 col-form-label">UserType*:</label><br>
-                            <select id="user">
+                            <select id="user" formControlName="userType">
                               <option value="userType" selected disabled>Select User Type</option>
                               <option value="{{user}}" *ngFor="let user of userType">{{user}}</option>
                             </select>
